src/test/shell/test_data/test_case_wrong_parentheses/expected_error_output.txt

Parsing error at position 7: Mismatched or missing parentheses
Error occurred at line 1:
f = exp(z
       ^ here
Parsing error at position 13: Mismatched parentheses
Error occurred at line 1:
f = 1/1-z-z^2)
             ^ here

Parsing error at position 8: Mismatched or missing parentheses
Error occurred at line 1:
egfcoeff(f, 5
        ^ here
Parsing error at position 0: Coefficient index out of bounds
Error occurred at line 1:
egfcoeff(f, 5)
^ here

